HW/HW2/results/lawsonserge_results.txt
test.java:3: error: package polynomial does not exist
import polynomial.LinearPolynomial;
                 ^
test.java:4: error: package polynomial does not exist
import polynomial.Polynomial;
                 ^
test.java:5: error: package polynomial does not exist
import polynomial.QuadraticPolynomial;
                 ^
3 errors
